fixed wrap text

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 .container {
   display: flex;
   justify-content: space-between;
- 
+  flex-wrap: wrap;
   gap: 2rem;
   align-items: center;
 }
